# homework20

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  orders.csv  pyproject.toml  requirements.txt
blogapp/: admin.py  views.py
blogapp/migrations/: 0001_initial.py
blogapp/templates/blogapp/: article_list.html
myauth/: urls.py  views.py
myauth/migrations/: 0001_initial.py
mysite/: settings.py  urls.py
shopapp/: admin.py  forms.py  models.py  serializers.py  sitemaps.py  tests.py  urls.py  views.py
shopapp/migrations/: 0002_product_created_at_product_discount_product_price.py  0005_order_user.py  0009_product_preview.py  0010_productimage.py
shopapp/templates/admin/: csv_form.html
shopapp/templates/admin/shopapp/: order_changelist.html
shopapp/templates/shopapp/: base.html  user_orders_list.html
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
